BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/CRM_ProposteContrattiPreventivi__c.object-meta.xml
<CustomObject>
    <label>Proposte/Contratti BStore</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Proposte/Simulazioni/Preventivi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposte/Simulazioni/Preventivi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>