BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_Appuntamento__c.field-meta.xml
<CustomField>
    <fullName>CRM_Appuntamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appuntamento</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Proposte/Simulazioni/Preventivi</relationshipLabel>
    <relationshipName>Proposte_Simulazioni_Preventivi</relationshipName>
    <type>Lookup</type>
</CustomField>