BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_Codiceprodotto__c.field-meta.xml
<CustomField>
    <fullName>CRM_Codiceprodotto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice prodotto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>