BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_DataInserimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataInserimento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Inserimento</label>
    <type>Date</type>
</CustomField>