BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_DataOraAppuntamento__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataOraAppuntamento__c</fullName>
    <formula>CRM_Appuntamento__r.SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data appuntamento</label>
    <type>DateTime</type>
</CustomField>