BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_DataScadenza__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataScadenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Scadenza</label>
    <type>Date</type>
</CustomField>