BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_DataUltimaModifica__c.field-meta.xml
<CustomField>
    <fullName>CRM_DataUltimaModifica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Ultima Modifica</label>
    <type>Date</type>
</CustomField>