BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Motivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>