BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_NDGCointestazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDGCointestazione__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDG Cointestazione</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposte/Simulazioni/Preventivi (NDG Cointestazione)</relationshipLabel>
    <relationshipName>Proposte_Simulazioni_Preventivi1</relationshipName>
    <type>Lookup</type>
</CustomField>