BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_NDGPrimario__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDGPrimario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDG Primario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposte/Simulazioni/Preventivi</relationshipLabel>
    <relationshipName>Proposte_Simulazioni_Preventivi</relationshipName>
    <type>Lookup</type>
</CustomField>