BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_Stato__c.field-meta.xml
<CustomField>
    <fullName>CRM_Stato__c</fullName>
    <formula>IF(ISBLANK(TEXT(CRM_StatoContratto__c)),TEXT(CRM_StatoProposta__c) , 
TEXT(CRM_StatoContratto__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato</label>
    <type>Text</type>
</CustomField>