BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_StatoContratto__c.field-meta.xml
<CustomField>
    <fullName>CRM_StatoContratto__c</fullName>
    <label>Stato Contratto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contratto da perfezionare</fullName>
            </value>
            <value>
                <fullName>Contratto concluso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>