BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_StatoProposta__c.field-meta.xml
<CustomField>
    <fullName>CRM_StatoProposta__c</fullName>
    <label>Stato Proposta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposta in corso</fullName>
            </value>
            <value>
                <fullName>Proposta in scadenza</fullName>
            </value>
            <value>
                <fullName>Proposta scaduta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>