BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Tipo__c</fullName>
    <formula>IF( CRM_NDGClienticointestatari__c != null,
 IMAGE(&quot;/resource/ndgcointestatario&quot;	, &quot;NDG Cointestatario&quot;),
 IMAGE(&quot;/resource/ndgintestatario&quot;, &quot;NDG Intestatario&quot;)
)</formula>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>