BPER/DEVF/force-app/main/default/objects/CRM_ProposteContrattiPreventivi__c/fields/CRM_TipologiaRecord__c.field-meta.xml
<CustomField>
    <fullName>CRM_TipologiaRecord__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipologia record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>